# ssh-vault

./: .gitignore  README.md  ssh-vault  ssh-vault.cabal  stack.yaml
cbits/: g_auth.c  g_auth.h  pty  pty.c  ssh-add.c  ssh-add.h
src/: Aes256.hs  Main.hs  Ssh.hs  Vault.hs  Vaults.hs  Workflows.hs  aes256.hs  ssh.hs
src/SSHVault/: CLI.hs  Common.hs  SBytes.hs  Vault.hs  Workflows.hs
src/SSHVault/Vault/: Config.hs  Queue.hs
src/SshVault/: CLI.hs  Common.hs  SBytes.hs  Vault.hs  Workflows.hs
tests/: Tests.hs
tests/data/: vault0.json
