cabal-version: >=1.10
name: ssh-vault
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2018 Author name here
maintainer: example@example.com
author: Author name here
homepage: https://github.com/githubuser/ssh-vault#readme
category: Web
build-type: Simple
-- extra-source-files:
--    README.md


library
    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules: 
          SshVault.Common
        , SshVault.Vault
        , SshVault.Workflows
    build-depends:
        base >=4.7 && <5,
        turtle -any,
        crypto-simple >=0.1.0.0,
        text -any,
        bytestring -any,
        memory >=0.14.14,
        utf8-string -any,
        aeson >=1.3.1.1,
        aeson-pretty >=0.8.7,
        cryptonite -any

executable ssh-vault
    hs-source-dirs: ., src
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        ssh-vault,
        base >=4.7 && <5,
        turtle -any,
        crypto-simple >=0.1.0.0,
        text -any,
        bytestring -any,
        memory >=0.14.14,
        utf8-string -any,
        aeson >=1.3.1.1,
        aeson-pretty >=0.8.7,
        cryptonite -any
    other-modules:
          SshVault.Common
        , SshVault.Vault
        , SshVault.Workflows    


Test-Suite ssh-vault-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           Tests.hs
  Other-modules:     
          SshVault.Common
        , SshVault.Vault
        , SshVault.Workflows
  Build-Depends:     
        ssh-vault,
        base >=4.7 && <5,
        turtle -any,
        crypto-simple >=0.1.0.0,
        text -any,
        bytestring -any,
        memory >=0.14.14,
        utf8-string -any,
        aeson >=1.3.1.1,
        aeson-pretty >=0.8.7,
        cryptonite -any
  ghc-options:       
        -Wall -fno-warn-orphans -fno-warn-missing-signatures -threaded
  default-language: Haskell2010