cabal-version: >=1.10
name: ssh-vault
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2018 Author name here
maintainer: example@example.com
author: Author name here
homepage: https://github.com/githubuser/ssh-vault#readme
category: Web
build-type: Simple
extra-source-files:
    README.md
exposed-modules:
    SshVault.Common
  , SshVault.Vault
  , SshVault.Workflows
  , SshVault.SBytes

library
    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules: 
          SshVault.Common
        , SshVault.Vault
        , SshVault.Workflows
        , SshVault.SBytes
    build-depends:
        base >=4.7 && <5,
        turtle -any,
        crypto-simple >=0.1.0.0,
        text -any,
        bytestring -any,
        memory >=0.14.14,
        utf8-string -any,
        aeson >=1.3.1.1,
        aeson-pretty >=0.8.7,
        cryptonite -any,
        memory -any

executable ssh-vault
    hs-source-dirs: ., src
    default-language: Haskell2010
    hs-source-dirs: . src
    other-modules:
        SshVault.Common,
        SshVault.Vault,
        SshVault.Workflows,
        SshVault.SBytes
    main-is: Main.hs
    build-depends:
        ssh-vault -any,
        base >=4.7 && <5,
        turtle -any,
        crypto-simple >=0.1.0.0,
        text -any,
        bytestring -any,
        memory >=0.14.14,
        utf8-string -any,
        aeson >=1.3.1.1,
        aeson-pretty >=0.8.7,
        cryptonite -any,
        memory -any

test-suite ssh-vault-tests
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    hs-source-dirs: tests src
    other-modules:
        SshVault.Common,
        SshVault.Vault,
        SshVault.Workflows,
        SshVault.SBytes
    default-language: Haskell2010
    ghc-options: -Wall -fno-warn-orphans -fno-warn-missing-signatures
                 -threaded
    build-depends:
        ssh-vault -any,
        base >=4.7 && <5,
        turtle -any,
        crypto-simple >=0.1.0.0,
        text -any,
        bytestring -any,
        memory >=0.14.14,
        utf8-string -any,
        aeson >=1.3.1.1,
        aeson-pretty >=0.8.7,
        cryptonite -any,
        memory -any