cabal-version: >=1.10
name: ssh-vault
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2018 Author name here
maintainer: example@example.com
author: Author name here
homepage: https://github.com/githubuser/ssh-vault#readme
category: Web
build-type: Simple
extra-source-files:
    cbits/*.h
    README.md


library
    exposed-modules:
        SSHVault.Common
        SSHVault.Vault
        SSHVault.Vault.Config
        SSHVault.Vault.Queue
        SSHVault.Workflows
        SSHVault.SBytes
        SSHVault.CLI
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        turtle -any,
        crypto-simple >=0.1.0.0,
        text -any,
        bytestring -any,
        memory >=0.14.14,
        utf8-string -any,
        aeson >=1.3.1.1,
        aeson-pretty >=0.8.7,
        cryptonite -any,
        memory -any,
        unordered-containers -any,
        vector >=0.12.0.1,
        cprng-aes -any,
        mtl -any,
        binary -any,
        random -any,
        old-time -any,
        base64-bytestring -any,
        optparse-applicative -any,
        time -any,
        process -any,
        containers -any
    C-Sources:
        cbits/ssh-add.c
    CC-Options:
        -Wall -Wextra -pedantic -std=c99
    Include-Dirs:
        cbits
    Includes:
        ssh-add.h


executable ssh-vault
    main-is: Main.hs
    hs-source-dirs: . src . src
    other-modules:
        SSHVault.Common
        SSHVault.Vault
        SSHVault.Vault.Config
        SSHVault.Vault.Queue
        SSHVault.Workflows
        SSHVault.SBytes
        SSHVault.CLI
    default-language: Haskell2010
    build-depends:
        ssh-vault -any,
        base >=4.7 && <5,
        turtle -any,
        crypto-simple >=0.1.0.0,
        text -any,
        bytestring -any,
        memory >=0.14.14,
        utf8-string -any,
        aeson >=1.3.1.1,
        aeson-pretty >=0.8.7,
        cryptonite -any,
        memory -any,
        unordered-containers -any,
        vector >=0.12.0.1,
        cprng-aes -any,
        mtl -any,
        binary -any,
        random -any,
        old-time -any,
        base64-bytestring -any,
        optparse-applicative -any,
        time -any,
        process -any,
        containers -any

test-suite ssh-vault-tests
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    hs-source-dirs: tests src
    other-modules:
        SSHVault.Common
        SSHVault.Vault
        SSHVault.Vault.Config
        SSHVault.Vault.Queue
        SSHVault.Workflows
        SSHVault.SBytes
        SSHVault.CLI
    default-language: Haskell2010
    ghc-options: -Wall -fno-warn-orphans -fno-warn-missing-signatures
                 -threaded -fprint-potential-instances
    build-depends:
        ssh-vault -any,
        base >=4.7 && <5,
        turtle -any,
        crypto-simple >=0.1.0.0,
        text -any,
        bytestring -any,
        memory >=0.14.14,
        utf8-string -any,
        aeson >=1.3.1.1,
        aeson-pretty >=0.8.7,
        cryptonite -any,
        memory -any,
        QuickCheck >=2.11.3,
        unordered-containers -any,
        cprng-aes -any,
        mtl -any,
        binary -any,
        random -any,
        old-time -any,
        base64-bytestring -any,
        optparse-applicative -any,
        time -any,
        process -any,
        containers -any